[package]
authors = [
  "gcxfd <i@rmw.link>",
  "Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"
]
description = "Internet Gateway Protocol client"
edition = "2021"
homepage = "https://github.com/gcxfd/rust-igd"
keywords = ["igd_async_std", "upnp"]
license = "MIT"
name = "igd_async_std"
readme = "README.md"
repository = "https://github.com/gcxfd/rust-igd"
version = "0.12.2"

[package.metadata.docs.rs]
all-features = true

[dependencies]
attohttpc = { version = "0.19", default-features = false }
bytes = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
http = { version = "0.2", optional = true }
log = "0.4"
rand = "0.8.5"
xmltree = "0.10"
async-std = { optional = true, version = "1.12.0", features = ["attributes"] }
url = "2.2.2"
surf = { version = "2.3.2", optional = true }

[dev-dependencies]
simplelog = "0.12"

[features]
aio = ["futures", "async-std", "surf", "bytes", "http"]
default = []

[[example]]
name = "aio"
required-features = ["aio"]
